# AddressBook

./: .gitignore  CMakeLists.txt  ImageEntry.h  README.md  addressbookmodel.cpp  addressbookmodel.h  addressentry.h  detailpagewidget.cpp  detailpagewidget.h  detailpagewidget.ui  envloader.h  fontupdate.cpp  fontupdate.h  generate_dummy_images.py  heartdelegate.cpp  heartdelegate.h  loadingdialog.h  main.cpp  mainpagWeidget.cpp  mainpagWeidget.h  mainpagewidget.cpp  mainpagewidget.h  mainpagewidget.ui  resources.qrc  testAddressBookData.json  util.h  widget.cpp  widget.h  widget.ui
src/core/: addressbookmodel.cpp  addressbookmodel.h  multicolumnfilterproxymodel.h
src/util/: fontupdate.cpp  util.h
